--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,37 +4,43 @@
         <div class="row mt-3">
             <div class="col-8 offset-2">
                 <h3>Edit Your Listing</h3>
-                <form method="post" action="/listings/<%= listing._id %>?_method=PUT">
+                <form method="post" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
 
                     <div class="mb-3">
                         <label for="title" class="form-label">Title</label>
-                        <input type="text" value="<%= listing.title %>" name="listing[title]" class="form-control">
+                        <input type="text" value="<%= listing.title %>" name="listing[title]" class="form-control" required>
+                        <div class="invalid-feedback">Title should be valid</div>
                     </div>
 
                     <div class="mb-3">
                         <label for="description" class="form-label">Description</label>
-                        <textarea name="listing[description]" class="form-control"><%= listing.description %></textarea>
+                        <textarea name="listing[description]" class="form-control" required><%= listing.description %></textarea>
+                        <div class="invalid-feedback">Description should be valid</div>
                     </div>
 
                     <div class="mb-3">
                         <label for="image" class="form-label">Image</label>
-                        <input type="text" value="<%= listing.image %>" name="listing[image]" class="form-control">
+                        <input type="text" value="<%= listing.image %>" name="listing[image]" class="form-control" required>
+                        <div class="invalid-feedback">Please enter a valid link for image</div>
                     </div>
 
                     <div class="mb-3">
                         <label for="price" class="form-label">Price</label>
-                        <input type="number" value="<%= listing.price %>" name="listing[price]" class="form-control">
+                        <input type="number" value="<%= listing.price %>" name="listing[price]" class="form-control" required>
+                        <div class="invalid-feedback">Price should be valid</div>
                     </div>
 
                     <div class="mb-3">
                         <label for="location" class="form-label">Location</label>
                         <input type="text" value="<%= listing.location %>" name="listing[location]"
-                            class="form-control">
+                            class="form-control" required>
+                            <div class="invalid-feedback">Location should be valid</div>
                     </div>
 
                     <div class="mb-3">
                         <label for="country" class="form-label">Country</label>
-                        <input type="text" value="<%= listing.country %>" name="listing[country]" class="form-control">
+                        <input type="text" value="<%= listing.country %>" name="listing[country]" class="form-control" required>
+                        <div class="invalid-feedback">Country should be valid</div>
                     </div>
                     <button type="submit" class="btn btn-dark add-btn mt-3">Edit</button>
                 </form>
