--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <%- include("../includes/flash") %>
     <%- include("../includes/navbar.ejs") %>
     <div class="container"><%-body %></div>
 
