--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -22,14 +22,14 @@
                     <div class="mb-3">
                         <label for="image" class="form-label">Image</label>
                         <input type="text" placeholder="Enter Image URL/Link" name="listing[image]"
-                            class="form-control" required>
+                            class="form-control" >
                           
                     </div>
 
                     <div class="row">
                         <div class="mb-3 col-md-4">
                             <label for="price" class="form-label">Price</label>
-                            <input   placeholder="1200" name="listing[price]" class="form-control" required>
+                            <input  type="number" placeholder="1200" name="listing[price]" class="form-control" required>
                             <div class="invalid-feedback">Price should be valid</div>
                         </div>
                         
